retrieveUnpackaged/objects/TQB_Candidate_Questions__mdt.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TQB Candidate Question</label>
    <pluralLabel>TQB Candidate Questions</pluralLabel>
</CustomObject>